@@ -1,5 +1,11 @@
 2008-01-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* datrie/tail.c (tail_set_suffix): Fix bug for the case in which
+	suffix argument and tail's suffix overlap. Bug report and patch by
+	shepmaster in http://linux.thai.net/node/102.
+
+2008-01-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* datrie/sb-trie.c (sb_trie_root): Return NULL pointer, rather than
 	FALSE. Bug reported by shepmaster in http://linux.thai.net/node/101.
 
